# rusttut

./: .build.fish  .gitignore  Cargo.toml  LICENCE  pyproject.toml
notebook/: 00_start.ipynb  01_ferris.ipynb  02_rust_book.ipynb  03_a_trip_to_io.ipynb  04_dice_dice_baby.ipynb  05_your_type.ipynb  06_go_with_the_flow.ipynb  07_pwned.ipynb  08_the_cutting_room_floor.ipynb  09_you_need_structure.ipynb  10_enumeration_sensation.ipynb  11_packing_your_cargo.ipynb  12_collectors_edition.ipynb
src/01_ferris/src/: main.rs
src/02_rust_book/src/: main.rs
src/03_a_trip_to_io/: Cargo.toml
src/03_a_trip_to_io/src/: main.rs
src/04_dice_dice_baby/: Cargo.toml
src/04_dice_dice_baby/src/: main.rs
src/05_your_type/: Cargo.toml
src/05_your_type/src/: main.rs
src/06_go_with_the_flow/: Cargo.toml
src/06_go_with_the_flow/src/: main.rs
src/07_pwned/: Cargo.toml
src/07_pwned/src/: main.rs
src/08_the_cutting_room_floor/: Cargo.toml
src/08_the_cutting_room_floor/src/: main.rs
src/09_you_need_structure/: Cargo.toml
src/09_you_need_structure/src/: main.rs
src/10_enumeration_sensation/: Cargo.toml
src/10_enumeration_sensation/src/: main.rs
src/11_packing_your_cargo/: Cargo.toml
src/11_packing_your_cargo/src/: am_mod.rs  main.rs
src/12_collectors_edition/: Cargo.toml
src/12_collectors_edition/src/: main.rs
src/rusttut/: __init__.py  __main__.py
